@@ -35,3 +35,4 @@
   * Complex Types are now supported
   * Support for Edm.Int16, Edm.Int32, Edm.Int64
   * Support for Edm.Decimal
+  * Support for Edm.DateTime
